# SUAS

./: .editorconfig  .firebaserc  .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.test.yml  docker-compose.yml  firebase.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: celebrities.py  dashboard.py  learning_log.py  model_admin.py  pipeline.py  posts.py  reports.py  router.py
backend/app/core/: auth_middleware.py  firestore.py  model_router.py  scheduler.py
backend/app/models/: digest.py  learning.py  post.py  settings.py  voice.py
backend/app/pipeline/: breaking_scanner.py  context_builder.py  dedup.py  image_generator.py  post_generator.py  runner.py  scorer.py
backend/app/pipeline/agents/: news_agent.py  trends_agent.py  voice_agent.py
backend/app/services/: digest_service.py  facebook_service.py  learning_service.py  post_service.py
backend/app/tasks/: generate_reports.py  run_pipeline.py  sync_metrics.py
backend/tests/: conftest.py
backend/tests/unit/: test_models.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  firebase.ts  index.css  main.tsx
frontend/src/api/: celebrities.ts  client.ts  dashboard.ts  learning_log.ts  model_admin.ts  pipeline.ts  posts.ts  reports.ts  settings.ts
frontend/src/auth/: AuthContext.tsx  LoginPage.tsx  ProtectedRoute.tsx
frontend/src/components/charts/: EngagementChart.tsx  ScoreDistribution.tsx
frontend/src/components/common/: Badge.tsx  ConfirmDialog.tsx  Modal.tsx
frontend/src/components/layout/: AppShell.tsx  BottomNav.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/pipeline/: PipelineStatusBar.tsx  TriggerButton.tsx
frontend/src/pages/: DashboardPage.tsx  HistoryPage.tsx  QueuePage.tsx  ReportsPage.tsx  SettingsPage.tsx
scripts/: export_training_data.py
(+4 files in other folders)
